changed the cucumber questions

--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,12 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="/newgame">New Game</a>
+	<a href="/newgame">New Game</a>
+	
+	<form action="/newgame">
+		
+    <input type="submit" value="New Game">
+  </form>
+  
 </body>
 </html>
