Adds battle page, cucumber tests for page redirection

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 <body>
 	<a href="/newgame">New Game</a>
 	
-	<form action="/newgame">
+	<form action="/newgame" method="post">
 		
     <input type="submit" value="New Game">
   </form>
