--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,7 @@
 
 	<a href="/newgame">New Game</a>
 	
-	<form action="/newgame" method="post">
-		
+	<form action="/newgame">
     <input type="submit" value="New Game">
   </form>
   
