--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
 </head>
 	<body>
 		<section style="width: 500px; margin-left: auto; margin-right: auto">
-			<h1>hello</h1>
+			<h1>BattleShips</h1>
 			<%= yield %>
 		</section>
 	</body>
