--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
   <title>Document</title>
+	  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	  <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+	  <link rel="stylesheet" href="/css/layout.css">
+		<meta charset="UTF-8">
+  
 </head>
 	<body>
+		<nav>
+			<ul>
+				<li>
+					New Game
+				</li>
+			</ul>
+		</nav>
+
 		<section style="width: 500px; margin-left: auto; margin-right: auto">
+
 			<h1>BattleShips</h1>
 			<%= yield %>
 		</section>
