--- a/views/board.erb
+++ b/views/board.erb
@@ -1,1 +1,27 @@
-board.erb
+  
+  <%current_row_coord = :A1%>
+  <br>
+  
+  <table id="board">
+   
+    <tr>
+   <% @current_player_object.board.grid.each do |coord,value| %>
+      
+      <%if current_row_coord.to_s.ord != coord.to_s.ord%>
+        <%current_row_coord=coord%>
+
+        <!-- row transition-->
+        </tr><tr>
+      <%end%>
+
+      <!-- matrix cells -->
+      <td class=<%= value.hit? ? 'hit' : 'miss' %> >
+        
+      <%=" #{coord} " %>
+      <%=" #{value.content.class} " %>
+      <%=" #{value.hit?} " %>
+      </td>  
+   <%end%>
+   
+   </tr>
+  </table>
